[tool.poetry]
name = "graphene-djmoney"
version = "0.2.0"
description = "GraphQL Money types for Django using graphene and django-money (djmoney)."
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene = "^3.1"
Django = "^3.2"
graphene-django = "^3.0"
django-money = "^3.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
